--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,9 @@ langchain = "^0.1.0"
 google-cloud-aiplatform = { version = "^1.39.0", optional = true }
 miniaudio = "^1.59"
 boto3 = "^1.34.16"
+pytest = "^7.4.3"
+pytest-asyncio = "^0.21.1"
+pytest-mock = "^3.12.0"
 
 
 [tool.poetry.group.lint.dependencies]
