--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,11 @@ homepage = "https://github.com/vocodedev/vocode-python"
 python = ">=3.9,<4.0"
 pydub = "^0.25.1"
 nltk = "^3.8.1"
-openai = "^1.7.1"
+openai = "^1.8.0"
 sounddevice = "^0.4.6"
-azure-cognitiveservices-speech = "^1.34.0"
+azure-cognitiveservices-speech = "^1.34.1"
 websockets = "^12.0.0"
-requests = "^2.31.0"
+requests = "2.31.0"
 uvicorn = "^0.23.2"
 fastapi = "^0.100.1"
 jinja2 = "^3.1.2"
@@ -24,7 +24,7 @@ six = "^1.16.0"
 opentelemetry-sdk = "^1.17.0"
 janus = "^1.0.0"
 scipy = "^1.11.4"
-anthropic = "^0.9.0"
+anthropic = "^0.10.0"
 
 elevenlabs = { version = "^0.2.27", optional = true }
 google-cloud-texttospeech = { version = "^2.15.1", optional = true }
@@ -33,22 +33,22 @@ gtts = { version = "^2.5.0", optional = true }
 google-cloud-speech = { version = "^2.23.0", optional = true }
 
 redis = { version = "^4.6.0", optional = true }
-twilio = { version = "^8.11.0", optional = true }
-vonage = { version = "^3.5.2", optional = true }
+twilio = { version = "^8.11.1", optional = true }
+vonage = { version = "^3.13.0", optional = true }
 nylas = { version = "^5.14.1", optional = true }
 speechrecognition = "^3.10.1"
 aiohttp = "^3.8.6"
 langchain = "^0.1.0"
 google-cloud-aiplatform = { version = "^1.39.0", optional = true }
 miniaudio = "^1.59"
-boto3 = "^1.34.16"
-pytest = "^7.4.3"
+boto3 = "^1.34.22"
+pytest = "^7.4.4"
 pytest-asyncio = "^0.21.1"
 pytest-mock = "^3.12.0"
 
 
 [tool.poetry.group.lint.dependencies]
-black = "^23.1.0"
+black = "^23.12.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -56,15 +56,15 @@ python-dotenv = "^1.0.0"
 pytest = "^7.3.1"
 pytest-asyncio = "^0.21.0"
 aioresponses = "^0.7.4"
-pre-commit = "^3.3.3"
+pre-commit = "^3.6.0"
 
 
 [tool.poetry.group.typing.dependencies]
 mypy = "^1.3.0"
-pydub-stubs = "^0.25.1.0"
+pydub-stubs = "^0.25.1.1"
 types-requests = "^2.30.0.0"
 types-regex = "^2023.5.5.0"
-types-redis = "^4.5.5.2"
+types-redis = "^4.6.0.11"
 
 [tool.mypy]
 ignore_missing_imports = "True"
