--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ sounddevice = "^0.4.6"
 azure-cognitiveservices-speech = "^1.34.1"
 websockets = "^12.0.0"
 requests = "2.31.0"
-uvicorn = "^0.23.2"
+uvicorn = ">=0.23.0"
 fastapi = "^0.100.1"
 jinja2 = "^3.1.2"
 python-multipart = "^0.0.6"
