--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ azure-cognitiveservices-speech = "^1.34.1"
 websockets = "^12.0.0"
 requests = "2.31.0"
 uvicorn = ">=0.23.0"
-fastapi = "^0.100.1"
+fastapi = ">=0.100.1"
 jinja2 = "^3.1.2"
 python-multipart = "^0.0.6"
 six = "^1.16.0"
