--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,8 @@ python-multipart = "^0.0.6"
 six = "^1.16.0"
 opentelemetry-sdk = "^1.17.0"
 janus = "^1.0.0"
-scipy = "^1.11.4"
-anthropic = "^0.10.0"
+scipy = "^1.12.0"
+anthropic = ">=0.11.0"
 
 elevenlabs = { version = "^0.2.27", optional = true }
 google-cloud-texttospeech = { version = "^2.15.1", optional = true }
@@ -33,15 +33,15 @@ gtts = { version = "^2.5.0", optional = true }
 google-cloud-speech = { version = "^2.23.0", optional = true }
 
 redis = { version = "^4.6.0", optional = true }
-twilio = { version = "^8.11.1", optional = true }
+twilio = { version = "^8.12.0", optional = true }
 vonage = { version = "^3.13.0", optional = true }
 nylas = { version = "^5.14.1", optional = true }
 speechrecognition = "^3.10.1"
-aiohttp = "^3.8.6"
+aiohttp = "^3.9.1"
 langchain = "^0.1.0"
-google-cloud-aiplatform = { version = "^1.39.0", optional = true }
+google-cloud-aiplatform = { version = "^1.40.0", optional = true }
 miniaudio = "^1.59"
-boto3 = "^1.34.22"
+boto3 = "^1.34.29"
 pytest = "^7.4.4"
 pytest-asyncio = "^0.21.1"
 pytest-mock = "^3.12.0"
