--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,10 @@ sounddevice = "^0.4.6"
 azure-cognitiveservices-speech = "^1.34.1"
 websockets = "^12.0.0"
 requests = "2.31.0"
-uvicorn = ">=0.23.0"
+uvicorn = ">=0.25.0"
 fastapi = ">=0.100.1"
 jinja2 = "^3.1.2"
-python-multipart = "^0.0.6"
+python-multipart = "^0.0.9"
 six = "^1.16.0"
 opentelemetry-sdk = "^1.17.0"
 janus = "^1.0.0"
@@ -37,13 +37,13 @@ twilio = { version = "^8.12.0", optional = true }
 vonage = { version = "^3.13.0", optional = true }
 nylas = { version = "^5.14.1", optional = true }
 speechrecognition = "^3.10.1"
-aiohttp = "^3.9.1"
+aiohttp = "^3.9.3"
 langchain = "^0.1.0"
 google-cloud-aiplatform = { version = "^1.40.0", optional = true }
 miniaudio = "^1.59"
 boto3 = "^1.34.29"
-pytest = "^7.4.4"
-pytest-asyncio = "^0.21.1"
+pytest = "^8.0.1"
+pytest-asyncio = "^0.23.5"
 pytest-mock = "^3.12.0"
 
 
@@ -53,8 +53,8 @@ black = "^23.12.1"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.0"
-pytest = "^7.3.1"
-pytest-asyncio = "^0.21.0"
+pytest = "8.0.1"
+pytest-asyncio = "^0.23.5"
 aioresponses = "^0.7.4"
 pre-commit = "^3.6.0"
 
